--- a/question/1.html
+++ b/question/1.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="assets/1.css" />
   </head>
   <style>
-    /*여기에 코드를 작성해주세요!*/
+  .title1 {
+    color: blueviolet;
+  }
+  .title2{
+   color: rgb(255, 241, 223); font-size: 20px;
+  }
+  .button{
+    background: #80ff00; font-size: 18px; opacity: 0.8;
+  }
   </style>
   <body>
     <div class="container">
@@ -17,15 +25,15 @@
           <div class="circle circle-one"></div>
           <div class="form-container">
             <img src="assets/1.png" alt="illustration" class="illustration" />
-            <h1 style="color: rgb(255, 0, 238)">Possibility To Reality</h1>
-            <h1 style="color: rgb(255, 255, 255); font-size: 20px">
+            <h1 class="title1">Possibility To Reality</h1>
+            <h1 class="title2">
               당신의 내일과 가장 가까운 오늘을 만듭니다.
             </h1>
             <form>
               <input type="text" placeholder="이름" />
               <input type="text" placeholder="학번" />
               <button
-                style="background: #80ff00; font-size: 18px; opacity: 0.8"
+                class="button"
               >
                 로그인하기
               </button>
