--- a/question/2.html
+++ b/question/2.html
@@ -26,12 +26,31 @@
       text-align: center;
     }
 
+    .box{
+       background-color:rgb(252, 163, 131);
+       padding: 30px;
+       border-radius: 5%;
+       margin:0%;
+       width:30%;
+       margin-left: auto;
+       margin-right: auto;
+       box-shadow: 0px 0px 10px gray;
+    }
+    .textbox{
+       text-align: center;
+       font-size:20px;
+    }
     /*여기에 코드를 작성해주세요!*/
   </style>
 
   <body>
     <h1>MBTI 커뮤니티에 오신 것을 환영합니다(●'◡'●)</h1>
     <p>안녕하세요, 당신의 mbti가 궁금합니다!</p>
-    <!--여기에 코드를 작성해주세요! -->
+    <div class="box">
+      <div class="textbox">강명묵 INTJ</div>
+      <div class="textbox">김애리 ENFP</div>
+      <div class="textbox">권소현 ISTJ</div>
+      <div class="textbox">김지후 INTJ</div>
+    </div>
   </body>
 </html>
