--- a/question/4.html
+++ b/question/4.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Likelion html,css - 4번 문제</title>
-    <link rel="stylesheet" href="assets/4.css" />
+    <link rel="stylesheet" href="./assets/4.css" />
   </head>
   <body>
     <div class="card">
-      <div class="image-box"></div>
-      <div class="content"></div>
+      <img class="image-box" src="assets/image2.jpg"></img>
+      <div class="content"> 
+      <h2>나는 포뇨</h2>
+      <p>헤엄치는 물고기랍니다!</p></div>
     </div>
   </body>
 </html>
